--- a/styles/style.css
+++ b/styles/style.css
@@ -108,6 +108,7 @@ nav{
         background: transparent;
         position: relative;
         cursor: pointer;
+        font-family: 'Quintessential', cursive;
     }
 
     .hero-btn:hover{
@@ -183,18 +184,27 @@ nav{
         margin: auto;
         text-align: center;
         padding-top:300px;
+        font-family: 'Quintessential', cursive;
     }
 
     .about h2{
         padding-top: 2rem;
+        font-family: 'Quintessential', cursive;
     }
 
     .about p{
         padding-top: rem;
+        font-family: 'Quintessential', cursive;
+    }
+
+    .us{
+        font-family: 'Quintessential', cursive;
     }
 
     .container{
         display: flex;
+        justify-content: center;
+        
     }
 
     .container img{
@@ -205,7 +215,7 @@ nav{
     .images{
         padding-top: 2rem;
         padding-right: 2rem;
-        border-radius: 20px;
+        border-radius: 40%;
     }
 
 
@@ -216,6 +226,7 @@ nav{
         color: azure;
         text-align: left;
         font-weight: bold;
+        padding-top: 8px;
     }
 
     button{
@@ -226,6 +237,8 @@ nav{
         margin-left: 10rem;
         margin-top: 10px;
         font-size: 20px;
+        cursor:pointer;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
     }
     .input-container h2{
         display: flex;
@@ -258,7 +271,9 @@ nav{
 
     .content-table th,
     .content-table td{
-        padding: 12px 15px;
+        padding: 20px 4rem;
+        font-family: 'Quintessential', cursive;
+        
     }
 
     .content-table tbody tr{
@@ -271,4 +286,28 @@ nav{
 
     .content-table tbody tr:last-of-type{
         border-bottom: 2px solid #46c1fa;
+    }
+
+    input{
+        border-radius: 5px;
+        border-color: black;
+        background-color: #c2f5f2;
+        padding-top: 5px;
+        font-family: 'Quintessential', cursive;
+
+    }
+
+    .input-container h2{
+        justify-content: center;
+        padding-left: 0;
+        font-family: 'Quintessential', cursive;
+    }
+
+    #selService{
+        border-radius: 5px;
+        border-color: black;
+        background-color: #c2f5f2;
+        font-weight: bold;
+        font-family: 'Quintessential', cursive;
+        cursor:pointer;
     }
